# Swig-Python-CMake

./: CMakeLists.txt  README.md  example.cxx  example.h  example.i.in  test_example.py
